# link_equipment

./: .gitignore  .tool-versions  README.md  mix.exs
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
assets/: package-lock.json  package.json
assets/css/: app.css  scale.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: link_equipment.ex  link_equipment_web.ex  test_helper.exs  util.ex
lib/link_equipment/: application.ex  factory.ex  link.ex  link_test.exs  lychee.ex  raw_link.ex  repo.ex  scan_manager.ex  service.ex  source_manager.ex  status_manager.ex
lib/link_equipment/link/: factory.ex  repo.ex  repo_test.exs
lib/link_equipment_web/: endpoint.ex  router.ex  telemetry.ex
lib/link_equipment_web/components/: components.ex  core_components.ex  layouts.ex  link_live_component.ex  living_source_component.ex  living_source_live_component.ex  raw_link_live_component.ex
lib/link_equipment_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/link_equipment_web/live/: home_live.ex  source_live.ex  v3_live.ex
native/linkequipment_lychee/: Cargo.toml  README.md
native/linkequipment_lychee/src/: lib.rs
priv/repo/: seeds.exs
priv/repo/migrations/: 20240719214509_add_oban_jobs_table.exs  20240721214030_add_links_table.exs
test/: test_helper.exs
test/link_equipment_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex  data_case.ex
(+2 files in other folders)
